[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invokeai_presets_cli"
authors = [
    {name = "Regi E",email = "regi@bynine.io"}
]
keywords = ["cli", "ai", "generative-ai", "invokeai"]
dynamic = ["version"]
description = "CLI tool for streamlining the process of installing InvokeAI preset styles"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
   "Programming Language :: Python :: 3.10",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: OS Independent"
]
dependencies = [
    "typer",
    "rich",
    "shellingham",
    "httpx",
    "python-dotenv",
    "inquirer",
    "packaging",
    "pytest"
]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.version]
path = "invokeai_presets_cli/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["invokeai_presets_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/invokeai_presets_cli",
]

[tool.hatch.build]
include = [
    "invokeai_presets_cli/snapshots/*",
]


[project.urls]
Repository = "https://github.com/regiellis/invokeai_presets_cli"
Documentation = "https://github.com/regiellis/invokeai_presets_cli/blob/main/README.md"
"Bug Tracker" = "https://github.com/regiellis/invokeai_presets_cli/issues"

[project.scripts]
invokeai-presets = "invokeai_presets_cli.__main__:main"

